--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
             <h3>作品集</h3>
             <ul>
                 <li>
-                    <a href="https://wei-lun.github.io/BMI/">BMI</a> (https://wei-lun.github.io/BMI/)
+                    <a href="https://wei-lun.github.io/BMI/">BMI</a>
                     <p class="my-2 ml-2">利用JS計算BMI且呈現在網頁上， 再用localStorage紀錄之前的紀錄</p>
                 </li>
                 <li>
                     <a href="https://wei-lun.github.io/kaohsiung-travel/travel.html">高雄旅遊地圖</a>
-                    (https://wei-lun.github.io/kaohsiung-travel/travel.html)
                     <p class="my-2 ml-2">
                         利用ajax抓取高雄市政府開放平台旅遊資料的ajax <br>
                         以陣列push方式且foreach判斷，將高雄各區放到select裡<br>
@@ -110,14 +109,12 @@
                 </li>
                 <li>
                     <a href="https://wei-lun.github.io/MULTIPLICATION-CHART/">99乘法表</a>
-                    (https://wei-lun.github.io/MULTIPLICATION-CHART/)
                     <p class="my-2 ml-2">
                         利用JavaScript的for迴圈完成一個九九乘法表的網頁
                     </p>
                 </li>
                 <li>
                     <a href="https://wei-lun.github.io/project/offical%20sites/index.html">靜態網頁project</a>
-                    (https://wei-lun.github.io/project/offical%20sites/index.html)
                     <p class="my-2 ml-2">
                         以Boostrap將整個網頁layout做出來，再以css將網頁刻出來<br>
                         header.footer幾乎一樣，因此每個頁面只需做些微修改，剩下就做每個頁面的content <br>
@@ -127,7 +124,6 @@
                 </li>
                 <li>
                     <a href="https://wei-lun.github.io/demo_display/index.html">聚泰網站各站台展示站</a>
-                    (https://wei-lun.github.io/demo_display/index.html)
                     <p class="my-2 ml-2">
                         利用JavaScript的for迴圈完成，將各資料料外用一個data.js管理<br>
                         並且將圖片藉由套件做lightbox效果
