--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <p class="text-center">學歷:中山大學 應用數學系</p>
                 <p class="text-center"><i class="far fa-envelope mr-1"></i>we379875@gmail.com</p>
                 <p class="text-center"><i class="fas fa-location-arrow mr-1"></i>高雄市湖內區</p>
+                <p class="text-center"><i class="fas fa-phone-alt mr-1"></i></i>07-6991839</p>
                 <p class="text-center"><i class="fas fa-mobile-alt mr-1"></i>0970563309</p>
                 <div class="px-2">
                     <p>
