--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <p class="text-center">學歷:中山大學 應用數學系</p>
                 <p class="text-center"><i class="far fa-envelope mr-1"></i>we379875@gmail.com</p>
                 <p class="text-center"><i class="fas fa-location-arrow mr-1"></i>高雄市湖內區</p>
-                <p class="text-center"><i class="fas fa-phone-alt mr-1"></i></i>07-6991839</p>
-                <p class="text-center"><i class="fas fa-mobile-alt mr-1"></i>0970563309</p>
+                <p class="text-center"><i class="fas fa-mobile-alt mr-1"></i>0970563309、07-6991839</p>
                 <div class="px-2">
                     <p>
                         熟悉利用前端工具開發專案，達到使用者需求的同時，也注重開發出友善的使用者介面，希望能透過程式碼解決問題並創造出良好的使用者體驗 。<br>
