--- a/resume.html
+++ b/resume.html
@@ -26,14 +26,14 @@
                     <p class="text-center"><i class="fas fa-mobile-alt mr-1"></i>0970563309、07-6991839</p>
                     <div class="px-2">
                         <p>
-                            熟悉利用前端工具開發專案，達到使用者需求的同時，也注重開發出友善的使用者介面，希望能透過程式碼解決問題並創造出良好的使用者體驗 。<br>
+                            熟悉利用前端工具開發專案，達到使用者需求的同時，也注重開發出友善的使用者介面，能透過程式碼解決問題並創造出良好的使用者體驗 。<br>
                         </p>
                         <p>
                             對於CODE打出來呈現在畫面上的樣子以及解決BUG會感到很有成就感，
                             對於不熟的技能或解不出來的問題也能馬上在網路上找到相關資料或找錢被詢問很快上手並解決
                         </p>
                         <p>
-                            聽同學胡勇志及趙丞德推薦，得知南山福利很優秀，並且工作環境很棒，未來希望也能為南山貢獻一份心力。
+                            學習力強，願意解決問題是我自認的優點，希望能夠有季會進入貴公司一同工作。
                         </p>
                     </div>
                 </div>
