--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
                             對於不熟的技能或解不出來的問題也能馬上在網路上找到相關資料或找錢被詢問很快上手並解決
                         </p>
                         <p>
-                            學習力強，願意解決問題是我自認的優點，希望能夠有季會進入貴公司一同工作。
+                            學習力強，願意解決問題是我自認的優點，希望能夠有機會進入貴公司一同工作。
                         </p>
                     </div>
                 </div>
