--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <hr>
-            <div class="px-5 mt-3">
+            <div class="p-5">
                 <h2>技能</h2>
                 <div class="skills row ">
                     <div class="col-sm-6">
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <hr>
-            <div class="experience px-5 mt-3">
+            <div class="experience p-5">
                 <h2>工作經驗</h2>
                 <ul class="timeline">
                     <li>
@@ -96,7 +96,7 @@
                 </ul>
             </div>
             <hr>
-            <div class="px-5 mt-3">
+            <div class="p-5">
                 <h3>作品集</h3>
                 <ul>
                     <li>
