--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="d-flex justify-content-between align-items-baseline">
-                            <h3>富邦人壽</h3> <small>2018/3~2018/8</small>
+                            <h3>富邦人壽</h3> <small>2018/3~2018/8 (6個月)</small>
                         </div>                    
                         <p class="pl-3">
                             曾在富邦擔任半年的業務員，在這段時間學到了相關保險知識，並且也有考到人身保險.財產保險及外幣保險的證照。
@@ -83,7 +83,7 @@
                     </li>
                     <li>
                         <div class="d-flex justify-content-between align-items-baseline">
-                            <h3>聚泰網路科技有限公司</h3> <small>2019/4~2020/8</small>
+                            <h3>聚泰網路科技有限公司</h3> <small>2019/4~2020/8 (1年5個月)</small>
                         </div>
                         <p class="pl-3">
                             在聚泰負責前端的工作，主要開發博弈網站的前後台。<br>    
