--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                     <p class="text-center"><i class="fas fa-mobile-alt mr-1"></i>0970563309、07-6991839</p>
                     <div class="px-2">
                         <p>
-                            熟悉利用前端語言，對於其他程式語言學習能力也很強 。<br>
+                            熟悉各種前端語言，對於其他程式語言學習能力也很強 。<br>
                         </p>
                         <p>
                             對於CODE打出來呈現在畫面上的樣子以及解決BUG會感到很有成就感，
-                            對於不熟的技能或解不出來的問題也能馬上在網路上找到相關資料或找錢被詢問很快上手並解決
+                            對於不熟的東西，能夠藉由觀摩原有的CODE，很快上手。<br>
+                            不懂的問題，也能馬上在網路上找到相關資料或找前輩詢問迅速解決
                         </p>
                         <p>
-                            學習力強，願意解決問題是我自認的優點，希望能夠有機會進入貴公司一同工作。
+                            學習力強，願意解決問題是我自認的優點，希望能夠有機會進入貴公司一同工作。<br>
                         </p>
                     </div>
                 </div>
@@ -90,7 +91,11 @@
                             工作內容為調整.優化版面及開發PM所要求的東西並處理各種BUG。<br>
                             公司專案主要是由PHP撰寫，因此除了前端語言，對於PHP也有些許了解。<br>
                             
-                            之後打算將專案轉成前後端分離改以VUE來寫，並使用vuetify框架，並且與後端合作串接api。
+                            之後打算將專案轉成前後端分離改以VUE來寫，並使用vuetify框架，並且與後端合作串接api。<br>
+                            有開發過維護功能，藉由與後端串接，能夠預約時間使網站進入維護狀態，並利用js連接RabbitMQ達到實時消息。
+                        </p>
+                        <p class="pl-3">
+                            在聚泰開發的專案由於公司解散，伺服器關閉，因此沒有相關網站都關閉了，不過在裡面所學所做，都有完整帶出來，一定會在未來工作上有更好的表現。
                         </p>
                     </li>
                 </ul>
