--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             有開發過維護功能，藉由與後端串接，能夠預約時間使網站進入維護狀態，並利用js連接RabbitMQ達到實時消息。
                         </p>
                         <p class="pl-3">
-                            在聚泰開發的專案由於公司解散，伺服器關閉，因此沒有相關網站都關閉了，不過在裡面所學所做，都有完整帶出來，一定會在未來工作上有更好的表現。
+                            在聚泰裡面的所做所學，獨自開發專案及與其他人合作的經驗，一定會在未來工作上帶來更好的表現。
                         </p>
                     </li>
                 </ul>
